# dsigma

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  runComputeCov.py  runComputeDS.py  runPrecomputeDS.py  runPreprocessLensRandom.py  runStackDS.py  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  bug_report.yml  feature_request.yaml  feature_request.yml  question.yaml
.github/workflows/: build.yml  paper.yml  python-package.yml  tests.yml
config/: sample_compute.yaml  sample_lens_precompute.yaml  sample_random_precompute.yaml
docs/: application_boss.rst  application_boss.txt  application_des.rst  application_des.txt  application_hsc.rst  application_hsc.txt  application_intro.txt  application_kids.rst  application_kids.txt  background.rst  background.txt  conf.py  index.rst  index.txt  installation.rst  installation.txt  magnification.rst  precomputation.rst  precomputation.txt  preparation.rst  preparation.txt  requirements.txt  resampling.txt  stacking.rst  stacking.txt
docs/api/: helpers.rst  helpers.txt  jackknife.rst  jackknife.txt  physics.rst  physics.txt  precompute.rst  scripts.rst  stacking.rst  stacking.txt  surveys.rst
docs/applications/: decade.rst  des_y1.rst  des_y3.rst  hsc_y1.rst  hsc_y3.rst  intro.rst  kids-1000.rst  kids_legacy.rst
docs/start/: background.rst  installation.rst  quickstart.rst
docs/workflow/: magnification.rst  precomputation.rst  preparation.rst  resampling.rst  stacking.rst
dsigma/: __init__.py  compute_ds.py  config.py  covariance.py  data_structure.py  functions.py  helpers.py  jackknife.py  maskgen.py  physics.py  plots.py  precompute.py  precompute_ds.py  precompute_engine.pyx  ssp_data.py  stack_ds.py  stacking.py
dsigma/scripts/: process_decade.py  process_des_y3.py  process_hsc_y3.py  process_kids_legacy.py  reduce_des_y3.py
dsigma/surveys/: __init__.py  cfhtls.py  decade.py  des.py  hsc.py  kids.py
dsigma/tests/: test_physics.py  test_precompute.py
paper/: paper.bib  paper.md
tests/: fixtures.py  test_full.py  test_jackknife.py  test_physics.py  test_precompute.py  test_stacking.py
tutorial/: compute.py  decade_0.csv  decade_0.ecsv  decade_1.csv  decade_1.ecsv  decade_2.csv  decade_2.ecsv  decade_3.csv  decade_3.ecsv  des_0.csv  des_0.ecsv  des_1.csv  des_1.ecsv  des_2.csv  des_2.ecsv  des_3.csv  des_3.ecsv  hsc_0.csv  hsc_0.ecsv  hsc_1.csv  hsc_1.ecsv  hsc_2.csv  hsc_2.ecsv  hsc_3.csv  hsc_3.ecsv  kids_0.csv  kids_0.ecsv  kids_1.csv  kids_1.ecsv  kids_2.csv  kids_2.ecsv  kids_3.csv  kids_3.ecsv  plot.py
