[build-system]
requires = ["setuptools>=77.0.0", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "dsigma"
requires-python = ">=3.9"
authors = [{name = "Johannes U. Lange", email = "jlange@american.edu"},
           {name = "Song Huang"}]
readme = "README.md"
keywords = ["astronomy", "weak-lensing"]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["numpy", "astropy", "scipy", "scikit-learn", "astropy-healpix",
                "tqdm"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/johannesulf/dsigma"
Documentation = "https://dsigma.readthedocs.io"
Repository = "https://github.com/johannesulf/dsigma.git"
Issues = "https://github.com/johannesulf/dsigma/issues"
Changelog = "https://github.com/johannesulf/dsigma/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["dsigma", "dsigma.surveys"]
dynamic.version = {attr = "dsigma.__version__"}
