[build-system]
requires = ["setuptools>=77.0.0", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "dsigma"
description = "A Galaxy-Galaxy Lensing Python Package"
requires-python = ">=3.9"
authors = [{name = "Johannes U. Lange", email = "jlange@american.edu"},
           {name = "Song Huang", email = "shuang@tsinghua.edu.cn"}]
readme = "README.md"
keywords = ["astronomy", "weak-lensing"]
license = "MIT"
dependencies = ["numpy", "astropy", "scipy", "scikit-learn", "astropy-healpix",
                "tqdm"]
dynamic = ["version"]
classifiers = ["Programming Language :: Python :: 3",
               "Operating System :: OS Independent",
               "Topic :: Scientific/Engineering :: Astronomy",
               "Intended Audience :: Science/Research"]

[project.optional-dependencies]
process = ["h5py>=3.0.0"]

[project.urls]
Homepage = "https://github.com/johannesulf/dsigma"
Documentation = "https://dsigma.readthedocs.io"
Repository = "https://github.com/johannesulf/dsigma.git"
Issues = "https://github.com/johannesulf/dsigma/issues"
Changelog = "https://github.com/johannesulf/dsigma/blob/main/CHANGELOG.md"

[project.scripts]
dsigma-process-decade = "dsigma.scripts.process_decade:main"
dsigma-process-des-y3 = "dsigma.scripts.process_des_y3:main"
dsigma-process-kids-legacy = "dsigma.scripts.process_kids_legacy:main"

[tool.setuptools]
packages = ["dsigma", "dsigma.scripts"]

[tool.setuptools.dynamic]
version = {attr = "dsigma.__version__"}

[[tool.setuptools.ext-modules]]
name = "dsigma.precompute_engine"
sources = ["dsigma/precompute_engine.pyx"]
